# notion-mcp

./: .gitignore  .mcp.json  .mcpbignore  CLAUDE.md  README.md  manifest.json  notion-mcp-ldraney.mcpb  pyproject.toml
.github/workflows/: publish.yml
docs/: index.html
src/: run_server.py
src/notion_mcp/: __init__.py  __main__.py  server.py
src/notion_mcp/tools/: __init__.py  blocks.py  comments.py  databases.py  pages.py  search.py  users.py
tests/: test_slim_response.py  test_tools.py
