[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-mcp-ldraney"
version = "0.1.13"
description = "MCP server wrapping the Notion Python SDK (v2025-09-03)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Lucas Draney"}]
keywords = ["notion", "mcp", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0",
    "notion-sdk-ldraney>=0.2.0",
]

[project.scripts]
notion-mcp-ldraney = "notion_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Repository = "https://github.com/ldraney/notion-mcp"
Issues = "https://github.com/ldraney/notion-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
